--- a/src/page.css
+++ b/src/page.css
@@ -11,23 +11,11 @@
   overflow-y: auto;
 }
 
-/*.book-body-wrapper {
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-  overflow-y: auto;
-  transform: translateX(0);
-  transition: transform 2500ms ease;
-}
-
-.with-summary .book-body-wrapper {
-  transform: translateX(var(--summary-width));
-}*/
-
 .body-inner {
   max-width: 700px;
-  min-height: calc(100% - var(--header-height) - var(--footer-height));
+  min-height: calc(100% - var(--footer-height));
   margin: 0 auto;
-  padding: 120px 10px;
+  padding: 120px 0;
 }
 
 .body-inner,
@@ -41,22 +29,19 @@
 }
 
 .book-body .navigation {
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: 13px 20px;
   position: fixed;
   top: 50%;
-  width: 60px;
+  width: 14px;
+  height: 20px;
+  margin: 0 22px;
   font-size: 0;
 }
 
 .navigation-next {
-  background-image: url(var(--asset-path)/images/icon-next.svg);
   right: 10px;
 }
 
 .navigation-prev {
-  background-image: url(var(--asset-path)/images/icon-prev.svg);
   left: 10px;
 }
 
@@ -66,12 +51,4 @@
 
 .page-wrapper {
   outline: 0
-}
-
-.toggle-input {
-  cursor: pointer;
-}
-
-.toggle-input input {
-  display: none;
 }
