--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,8 @@
 }
 
 @import "type.css";
+@import "macros/button.css";
+@import "icons.css";
 @import "layout.css";
 @import "summary.css";
 @import "header.css";
