--- a/src/type.css
+++ b/src/type.css
@@ -9,14 +9,14 @@ html, body {
 
 h1 {
   font-weight: 300;
-  font-size: 40px;
+  font-size: 36px;
   line-height: 54px;
   margin-top: 20px;
-  margin-bottom: 20px;
-  padding-top: 6px;
+  margin-bottom: 1px;
+  padding-top: 9px;
 }
 
-:not(h1,:first-child) + h1 {
+:not(h1) + h1 {
   border-top: 1px solid #e2e2e2;
 }
 
@@ -36,7 +36,7 @@ h3 {
   margin-bottom: 0px;
   font-weight: bold;
   text-transform: uppercase;
-  color:#686868;
+  color: #686868;
 }
 
 h4 {
@@ -49,7 +49,7 @@ h4 {
 
 p, ul, ol, pre, table, blockquote {
   margin-top: 0px;
-  margin-bottom: 54px;
+  margin-bottom: 25px;
 }
 
 pre {
