--- a/src/summary.css
+++ b/src/summary.css
@@ -66,7 +66,7 @@
   text-decoration: none;
 }
 
-.active .chapter-title {
+.active > .chapter-title {
   color: var(--base-color);
 }
 
@@ -82,7 +82,7 @@
 }
 
 .chapter-title:hover::before ,
-.active .chapter-title::before {
+.active > .chapter-title::before {
   background-color: #fff;
 }
 
