--- a/src/type.css
+++ b/src/type.css
@@ -112,8 +112,9 @@ a:hover {
 
 /* Sanitation */
 hr {
-  border: 1px solid;
-  margin: -1px 0;
+  border: none;
+  border-top: 1px solid #e2e2e2;
+  margin: 20px 0;
 }
 
 ul ul, ol ol, ul ol, ol ul {
