Inline the button macro in the header template
Because macros don't seem to inherit properties from the importer
(probably for good reasons) we have to inline the macro where
it's used. There's probably some other means to resolve this,
but inlining the macro doesn't hurt, since it's only ever used
in the header anyway.

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 }
 
 @import "type.css";
-@import "macros/button.css";
+@import "button.css";
 @import "icons.css";
 @import "layout.css";
 @import "summary.css";
