--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 }
 
 @import "type.css";
-@import "button.css";
+@import "macros/button.css";
 @import "icons.css";
 @import "layout.css";
 @import "summary.css";
